# aoapc-homework

./: .clangd  .gitignore  CMakeLists.txt  README.md  lcompile.sh  llaunch.sh  lrun.sh
ch07/: UVa12569.cc
ch07/data/UVa12569/: README.md
ch07/pure/: UVa12569.cc
