cmake_minimum_required(VERSION 3.25.0)
project(algocomptitionLRJ-homework VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
# set output executable file directory
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# include_directories("./includes/")

add_executable(algocomptitionLRJ-homework "./ch07/UVa12569.cc")
